Fix for arrows alignment. and Egde issue

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -99,6 +99,7 @@
     margin-left: 8px;
     margin-top: -7px;
   }
+
 }
 
 .CallMeLink {
@@ -529,12 +530,12 @@ margin-bottom: 4px;
 
 .slick-next {
   position: absolute;
-  top: 341px;
+  top: 321px;
   z-index: 1001;
-  left: 56px;
+  left: 54px;
   width: 40px;
   height: 40px;
-  /*transform: rotate(180deg);*/
+  transform: rotate(180deg);
 }
 
 .slick-dots li button::before {
